[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

authors = ["WuLiang wu1998102@gmai.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort"  # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
panic = "abort"

[dependencies]
