[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

authors = ["WuLiang wu1998102@gmai.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = {git = "https://github.com/rust-embedded/riscv",features = ["inline-asm"]}
bitflags = "1.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }